# VIGILUM

./: .dockerignore  .env.example  .gitignore  DELIVERY_STATUS.md  DEVELOPMENT_STATUS.md  DOCKER_COMPLETE_GUIDE.md  DOCKER_SETUP.md  Dockerfile  Makefile  NEXT_4_WEEKS_TASKS.md  PHASE_10_COMPLETION_SUMMARY.md  PHASE_10_QUICK_REFERENCE.md  PHASE_14_3_COMPLETE.md  PHASE_14_IMPLEMENTATION_GUIDE.md  PHASE_14_SLITHER_COMPLETE.md  PHASE_9_COMPLETION.md  PHASE_9_FINAL_REPORT.md  PROJECT_COMPLETION_STATUS_2026.md  QUICK_REFERENCE.md  README.md  README_CURRENT_STATUS.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: build-deploy.yml
backend/: Dockerfile  go.mod  go.sum
backend/scripts/: api-test-guide.md  setup-db.ps1  setup-db.sh  test-api.ps1  test-api.sh
circuits/: Nargo.toml
circuits/src/: exploit_proof.nr  human_proof.nr  lib.nr  proof_of_audit.nr  reputation.nr
contracts/script/: DeployDAOContracts.s.sol  DeployVigilumRegistry.s.sol
contracts/src/: IdentityFirewall.sol  ProofOfExploit.sol  RedTeamDAO.sol  ThreatOracle.sol  VigilumRegistry.sol
docs/: learning.md
logging/: alerts.yml  docker-compose.yml  loki-config.yml  prometheus.yml
ml/: README.md  feature_extractor.go  pyproject.toml
ml/src/vigilum_ml/: __init__.py  dataset.py  features.py  model.py  models.py  training.py
ml/src/vigilum_ml/cli/: __init__.py  train.py
ml/src/vigilum_ml/inference/: __init__.py  service.py
ml/tests/: test_dataset.py  test_inference.py  test_model.py
scripts/: run-integration-tests.sh
sdk/src/wasm/: Cargo.toml
sdk/src/wasm/src/: lib.rs
sdk/ts-sdk/: package.json  (+2 more)
whole documentation/: COMPLETION_REPORT.md  DOCKER_SETUP.md  DOCUMENTATION.md  EXECUTION_PLAN.md  OBJECT_DESIGN.md  PHASES_11_12_13_COMPLETE.md  PHASE_10_DOCUMENTATION.md  PHASE_10_FINAL_REPORT.md  PHASE_9E_TESTING_GUIDE.md  SECURITY_AUDIT.md  SYSTEM_DESIGN.md  TASK_2_DEPLOYMENT_GUIDE.md  TEST_FAILURES_EXPLAINED.md  achieve.md  architecture.md  requirements.md  risks.md  roadmap.md  techstack.md  what to do.md
(+102 files in other folders)
