[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vigilum-ml"
version = "0.1.0"
description = "VIGILUM Machine Learning Pipeline for Smart Contract Security"
authors = [
    {name = "VIGILUM Team"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "polars>=1.0",
    "pydantic>=2.0",
    "scikit-learn>=1.4",
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "web3>=7.0",
    "httpx>=0.27",
    "numpy>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vigilum_ml"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
